# Insighta

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  db.py  deps.py  main.py  repositories.py  schemas.py
